alteracao para deploy

--- a/package.json
+++ b/package.json
@@ -1,26 +1,27 @@
 {
-  "name": "ip-adress-tracker",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "leaflet": "^1.7.1",
-    "next": "12.0.4",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-leaflet": "^3.2.2",
-    "sass": "^1.43.4"
-  },
-  "devDependencies": {
-    "@types/leaflet": "^1.7.6",
-    "@types/node": "16.11.8",
-    "@types/react": "17.0.35",
-    "eslint": "7",
-    "eslint-config-next": "12.0.4",
-    "typescript": "4.5.2"
-  }
+	"name": "ip-address-tracker",
+	"private": true,
+	"homepage": "./",
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"leaflet": "^1.7.1",
+		"next": "12.0.4",
+		"react": "17.0.2",
+		"react-dom": "17.0.2",
+		"react-leaflet": "^3.2.2",
+		"sass": "^1.43.4"
+	},
+	"devDependencies": {
+		"@types/leaflet": "^1.7.6",
+		"@types/node": "16.11.8",
+		"@types/react": "17.0.35",
+		"eslint": "7",
+		"eslint-config-next": "12.0.4",
+		"typescript": "4.5.2"
+	}
 }
